# DriverIndexer

./: .gitignore  Cargo.toml  README.md  README.zh.md  build.bat  build.rs
refs/: 易语言设备操作模块源码.e  设备操作模块.ec
resource/: resource.rc
src/: cli.rs  macros.rs  main.rs  test.rs  tests.rs
src/cli/: cli.rs  matches.rs  mod.rs  validator.rs
src/command/: classify_driver.rs  create_driver.rs  create_index.rs  load_driver.rs  mod.rs
src/i18n/: en_US.rs  mod.rs  zh_CN.rs
src/i18n/en-US/: cli.ftl  main.ftl
src/i18n/zh-CN/: cli.ftl  main.ftl
src/subCommand/: classify_driver.rs  create_index.rs  load_driver.rs  mod.rs
src/utils/: Zip7z.rs  _extract.rs  _setupAPI.rs  console.rs  devcon.rs  drvstoreAPI.rs  mod.rs  newdevAPI.rs  setupAPI.rs  sevenZIP.rs  sevenZip.rs  util.rs
testDrive/: VMwareVMCI.7z
