[package]
name = "DriverIndexer"
version = "0.7.0"
authors = ["Fir"]
edition = "2018"
build = "build.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[build-dependencies]
embed-resource = "1.4"
windows = "0.9.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "~2.33"
glob = "0.3.0"
chardet = "0.2.4"
encoding = "0.2"
regex = "1.4.5"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
rust-embed = "5.9.0"
lazy_static = "1.4.0"
console = "0.14.0"
chrono = "0.4"
remove_dir_all = "0.7.0"
winreg = "0.8.0"
unic-langid = "0.9.0"
fluent-templates = "0.6.1"
windows = "0.9.1"
libloading = "0.7.0"

#tokio = { version = "1", features = ["full"] }
#subprocess = "0.2.6"
#anyhow = "1.0"
#thiserror = "1.0"
