[package]
name = "DriverIndexer"
version = "1.1.0"
authors = ["Fir"]
edition = "2018"
build = "build.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[build-dependencies]
embed-resource = "2.4.3"
thunk-rs = "0.3.2"
windows = "0.9.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vc-ltl = "5.1.1"
clap = "~2.33"
glob = "0.3.0"
chardet = "0.2.4"
encoding = "0.2"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.5.0"
lazy_static = "1.4.0"
console = "0.15.8"
chrono = "0.4"
remove_dir_all = "0.7.0"
winreg = "0.52.0"
unic-langid = "0.9.0"
fluent-templates = "0.10.1"
windows = "0.9.1"
libloading = "0.8.5"
widestring = "1.0.0-beta.1"
fastrand = "2.1.1"

[dependencies.windows-version]
version = "0.1"
